tests/ui/rfc-2627-raw-dylib/import-name-type-invalid-format.stderr
error: import name type must be of the form `import_name_type = "string"`
  --> $DIR/import-name-type-invalid-format.rs:3:42
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = 6)]
   |                                          ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

