tests/ui/rfc-2627-raw-dylib/import-name-type-invalid-format.rs
// only-windows
// only-x86
#[link(name = "foo", kind = "raw-dylib", import_name_type = 6)]
//~^ ERROR import name type must be of the form `import_name_type = "string"`
extern "C" { }

fn main() {}
